--- a/assets/css/src/layout/widgets.scss
+++ b/assets/css/src/layout/widgets.scss
@@ -67,6 +67,7 @@
 .widget {
   .excerpted-post {
     .entry-hero {
+      margin-right: 0;
       margin-left: 0;
     }
   }
